src/test/ui/methods/method-resolvable-path-in-pattern.stderr
error[E0532]: expected unit struct/variant or constant, found method `MyTrait::trait_bar`
  --> $DIR/method-resolvable-path-in-pattern.rs:21:9
   |
LL |         <Foo as MyTrait>::trait_bar => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a unit struct/variant or constant

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
